Añadir contenido frontend y ejemplo api

--- a/models/index.html
+++ b/models/index.html
@@ -91,6 +91,23 @@
             </div>
         </div>
     </article>
+    <article>
+        <div>
+            <img src="" alt="">
+            <div>
+                <h2>Encontrar la carta</h2>
+                <p>Accede a la carta mediante el header o mediante este enlace</p>
+                <a href="">Nuestra carta</a>
+            </div>
+            <div>
+                <h2>Pagos 100% seguros</h2>
+            </div>
+        </div>
+
+        <div>
+            
+        </div>
+    </article>
     <footer>
         <div class="footer-section logo">
             <img src="img/logo.png" alt="Logo de WallaFood">
