Cambios web responsive

--- a/models/index.html
+++ b/models/index.html
@@ -11,7 +11,7 @@
     <header>
         <div id="header">
             <img src="img/logo.png" alt="">
-            <input type="text" name="hola" id="">
+            <input type="text" id="">
             <a href="">Regístrate o inicia sesíon</a>
             <a href="">Pedir</a> 
         </div>
@@ -31,36 +31,46 @@
             <img src="img/imagenbanner.png" alt="" class="img-fluid">
         </div>
     </article>
-    <article class="productosInicio">
+    <article class="productosInicio container">
         <h1>Pizzas</h1>
-        <div class="productosAlignInicio">
-            <div class="producto">
-                <img src="img/pizza1.png" alt="">
-                <h3>Melanzani</h3>
-                <p>Berenjena, queso mozzarella, tomate, albahaca fresca, Ajo, aceite de oliva, queso parmesano</p>
+        <div class="row">
+            <div class="col-lg-2 col-md-6 col-sm-12 mb-4">
+                <div class="producto">
+                    <img src="img/pizza1.png" alt="" class="img-fluid rounded">
+                    <h3>Melanzani</h3>
+                    <p>Berenjena, queso mozzarella, tomate, albahaca fresca, Ajo, aceite de oliva, queso parmesano</p>
+                </div>
             </div>
-            <div class="producto">
-                <img src="img/pizza2.png" alt="">
-                <h3>Pepperoni</h3>
-                <p>Pepperoni, queso mozzarella, salsa de tomate, orégano</p>
+            <div class="col-lg-2 col-md-6 col-sm-12 mb-4">
+                <div class="producto">
+                    <img src="img/pizza2.png" alt="" class="img-fluid rounded">
+                    <h3>Pepperoni</h3>
+                    <p>Pepperoni, queso mozzarella, salsa de tomate, orégano</p>
+                </div>
             </div>
-            <div class="producto">
-                <img src="img/pizza3.png" alt="">
-                <h3>Margherita</h3>
-                <p>Salsa de tomate, queso mozzarella, albahaca fresca, aceite de oliva</p>
+            <div class="col-lg-2 col-md-6 col-sm-12 mb-4">
+                <div class="producto">
+                    <img src="img/pizza3.png" alt="" class="img-fluid rounded">
+                    <h3>Margherita</h3>
+                    <p>Salsa de tomate, queso mozzarella, albahaca fresca, aceite de oliva</p>
+                </div>
             </div>
-            <div class="producto">
-                <img src="img/pizza4.png" alt="">
-                <h3>Al Capone</h3>
-                <p>Salsa de tomate, queso mozzarella, pepperoni, jamón, salchicha, pimiento, cebolla, aceitunas negras, orégano</p>
+            <div class="col-lg-2 col-md-6 col-sm-12 mb-4">
+                <div class="producto">
+                    <img src="img/pizza4.png" alt="" class="img-fluid rounded">
+                    <h3>Al Capone</h3>
+                    <p>Salsa de tomate, queso mozzarella, pepperoni, jamón, salchicha, pimiento, cebolla, aceitunas negras, orégano</p>
+                </div>
             </div>
-            <div class="producto">
-                <img src="img/pizza5.png" alt="">
-                <h3>The Italian Job</h3>
-                <p>Salsa de tomate, queso mozzarella, jamón serrano, rúcula, tomates cherry, lascas de parmesano, aceite de oliva</p>
+            <div class="col-lg-2 col-md-6 col-sm-12 mb-4">
+                <div class="producto">
+                    <img src="img/pizza5.png" alt="" class="img-fluid rounded">
+                    <h3>The Italian Job</h3>
+                    <p>Salsa de tomate, queso mozzarella, jamón serrano, rúcula, tomates cherry, lascas de parmesano, aceite de oliva</p>
+                </div>
             </div>
         </div>
-    </article>
+    </article>    
     <article class="productosInicio">
         <h1>Raciones</h1>
         <div class="productosAlignInicio">
